chore(release): v0.4.0
feat(board): search with soft/hard filter toggle + ESC/X reset
feat(board): column header shows filtered count | effort
feat(status): canonical pills NEU|TO_DO|IN_BEARBEITUNG|FERTIG
feat(modals): create modal with Save&New + Reset; consistent styling
feat(dnd): reduce jitter; drag on full card
feat(backend): TaskStatus enum + DTO/Mapper/Controller; PATCH updates
feat(db): seed stations + 30 demo tasks (Flyway V2/V3)
refactor(stations): treat 'nicht zugeordnet' as real station